--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
         <link rel="stylesheet" href="style.css">
         <title>Landing Page</title>
     </head>
-    
-    <body>
 
+    <body>
+        <div class="header">
+            <img src="images/etoji.svg" alt="logo">
+            <ul class="navigation">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>
     </body>
 </html>
