Update header flexbox to improve scaling behavior

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 
     <body>
         <div class="header">
-            <img src="images/etoji.svg" alt="logo">
-            <ul class="navigation">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
+            <div class="header-wrapper">
+                <img src="images/etoji.svg" alt="logo">
+                <ul class="navigation">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
