--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
             <div class="header-wrapper">
                 <img src="images/etoji.svg" alt="logo">
                 <ul class="navigation">
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
                 </ul>
+            </div>
+        </div>
+        <div class="hero">
+            <div class="hero-wrapper">
+                <div class="hero-text">
+                    <h1>“To be proud neither of myself nor others… I chose that path, don’t I?”</h1>
+                    <p>This was an insight into Toji’s personal philosophy, and he believed that. Seeing how he had faced rejection each time and did not know what it felt like to experience someone being proud of him, he completely rejected that emotion, and he vowed never to be proud of anyone. And while it was fine that he was never proud of himself, his two children, especially Megumi, suffered significantly because of that.</p>
+                    <button>Yes?</button>
+                </div>
+                 <img src="images/toji-fushiguro.jpeg" class="hero-image" alt="an image of toji fushiguro">
             </div>
         </div>
     </body>
