--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="hero-text">
                     <h1>“To be proud neither of myself nor others… I chose that path, don’t I?”</h1>
                     <p>This was an insight into Toji’s personal philosophy, and he believed that. Seeing how he had faced rejection each time and did not know what it felt like to experience someone being proud of him, he completely rejected that emotion, and he vowed never to be proud of anyone. And while it was fine that he was never proud of himself, his two children, especially Megumi, suffered significantly because of that.</p>
-                    <button>Yes?</button>
+                    <button class="hero-button">Yes?</button>
                 </div>
-                 <img src="images/toji-fushiguro.jpeg" class="hero-image" alt="an image of toji fushiguro">
+                <img src="images/toji-fushiguro.jpeg" class="hero-image" alt="an image of toji fushiguro">
             </div>
         </div>
     </body>
