Create first draft of information block

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="hero">
             <div class="hero-wrapper">
                 <div class="hero-text">
@@ -25,6 +26,28 @@
                     <button class="hero-button">Yes?</button>
                 </div>
                 <img src="images/toji-fushiguro.jpeg" class="hero-image" alt="an image of toji fushiguro">
+            </div>
+        </div>
+
+        <div class="info">
+            <h2 class="info-header">Some random information.</h2>
+            <div class="info-block">
+                <div>
+                    <div class="illustration"></div>
+                    <p>Text that goes to the above illustration.</p>
+                </div>
+                <div>
+                    <div class="illustration"></div>
+                    <p>Text that goes to the above illustration.</p>
+                </div>
+                <div>
+                    <div class="illustration"></div>
+                    <p>Text that goes to the above illustration.</p>
+                </div>
+                <div>
+                    <div class="illustration"></div>
+                    <p>Text that goes to the above illustration.</p>
+                </div>
             </div>
         </div>
     </body>
