Clean up infoblock section

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
             <div class="info-block">
                 <div>
                     <div class="illustration"></div>
-                    <p>Text that goes to the above illustration.</p>
+                    <p>Text that goes to the below the illustration.</p>
                 </div>
                 <div>
                     <div class="illustration"></div>
-                    <p>Text that goes to the above illustration.</p>
+                    <p>Text that goes to the below the illustration.</p>
                 </div>
                 <div>
                     <div class="illustration"></div>
-                    <p>Text that goes to the above illustration.</p>
+                    <p>Text that goes to the below the illustration.</p>
                 </div>
                 <div>
                     <div class="illustration"></div>
-                    <p>Text that goes to the above illustration.</p>
+                    <p>Text that goes to the below the illustration.</p>
                 </div>
             </div>
         </div>
