--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
 
     <body>
+
+        <!-- Header section -->
         <div class="header">
             <div class="header-wrapper">
                 <img src="images/etoji.svg" alt="logo">
@@ -18,6 +20,7 @@
             </div>
         </div>
 
+        <!-- Hero section -->
         <div class="hero">
             <div class="hero-wrapper">
                 <div class="hero-text">
@@ -29,6 +32,7 @@
             </div>
         </div>
 
+        <!-- Info section -->
         <div class="info">
             <h2 class="info-header">Some random information.</h2>
             <div class="info-block">
