--- a/index.html
+++ b/index.html
@@ -54,5 +54,14 @@
                 </div>
             </div>
         </div>
+
+        <!-- Quote section -->
+        <div class="quote-block">
+            <div class="quote-wrapper">
+                <div class="quote"><q>Do not fear death. Death is always at our side. When we show fear, it jumps at us faster than light. But, if we do not show fear, it casts its eye upon us gently and then guides us into infinity.</q></div>
+                <div class="author">- Laughing Bull, Cowboy Bebop</div>
+            </div>
+        </div>
+
     </body>
 </html>
