Add call to action content

--- a/index.html
+++ b/index.html
@@ -63,5 +63,14 @@
             </div>
         </div>
 
+        <!-- Call to action section -->
+        <div class="cta-block">
+            <div class="cta-text">
+                <div>Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <button class="cta-button">Sign up</button>
+        </div>
+
     </body>
 </html>
