Style call to action section

--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
 
         <!-- Call to action section -->
         <div class="cta-block">
-            <div class="cta-text">
-                <div>Call to action! It's time!</div>
-                <div>Sign up for our product by clicking that button right over there!</div>
+            <div class="cta-wrapper">
+                <div class="cta-text">
+                    <div class="cta-text-header">Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="cta-button">Sign up</button>
             </div>
-            <button class="cta-button">Sign up</button>
         </div>
 
     </body>
