Create footer content

--- a/index.html
+++ b/index.html
@@ -74,5 +74,10 @@
             </div>
         </div>
 
+        <!-- Footer section -->
+        <div class="footer-block">
+            Copyright © etoji 2024
+        </div>
+
     </body>
 </html>
