Add footer styling

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <!-- Footer section -->
         <div class="footer-block">
-            Copyright © etoji 2024
+            <div>Copyright © etoji 2024</div>
         </div>
 
     </body>
